Removed default columns.